--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Meus objetivos do ano e da vida</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano e da vida<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao">começar a fazer minha tão sonhada faculdade de pscologia</button>
+            
+            <button class="botao">me casar e conquistar minhas coisas</button>
+            <button class="botao">fazer uma pós e se especializar na minha área</button>
+            <button class="botao">começar a formar a minha família</button>
+          .botoes {
+    display: block;
+}
         </div>
     </section>
 </body>
