LEREI OS BOTÕES

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano e da vida<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">começar a fazer minha tão sonhada faculdade de pscologia</button>
-            
+            <button class="botao ativo">começar a fazer minha tão sonhada faculdade de pscologia</button>
             <button class="botao">me casar e conquistar minhas coisas</button>
             <button class="botao">fazer uma pós e se especializar na minha área</button>
             <button class="botao">começar a formar a minha família</button>
-          .botoes {
-    display: block;
-}
         </div>
     </section>
 </body>
